# cloudformation-aws-onboarding

./: .env.example  .gitignore  .gitlab-ci.yml  AWSCloudFormationStackSetAdministrationRole.yml  Audit-d.rules  CLAUDE.md  CopyToS3.sh  ExternalIdUsageExamle.yaml  Flow.md  Gen3-Deployment-Guide.md  README.md  Steps.txt  TestDuplications.yaml  deploy.sh  stack-fmt.yaml  stack1.yaml  stack2.yaml  stackset_child1.yaml  stackset_child2.yaml
.github/: ACT_CLI_TESTING_GUIDE.md  AWS_CREDENTIALS_SETUP.md  WORKFLOW_DOCUMENTATION.md  WORKFLOW_VERIFICATION.md  setup-aws-oidc.sh
.github/scripts/: pyproject.toml  s3_sync.py
CFN/: AWSCloudFormationStackSetAdministrationRole.yaml  AWSCloudFormationStackSetExecutionRole.yaml  Cleanup.yaml  Core.yaml  CyngularCloudFormationStackSetAdministrationRole.yaml  CyngularCloudFormationStackSetExecutionRole.yaml  CyngularOnBoarding.yaml  CyngularOnBoardingDev.yaml  CyngularOnBoardingV2.yaml  Main.yaml  MainStack.yaml  ManagementRegional.yaml  MembersGlobal.yaml  MembersRegional.yaml  OffBoarding.yaml  ReadonlyRole.yaml  ReadonlyRoleAddon.yaml  S3-Bucket-Policy-Statement.json  Services.yaml  UpdateOnboarding.yaml  bucket-policy-s3-statement.json  bucket_and_trail.yaml  logs_bucket_policy_statements.json  s3-events-ingestion.yaml  stack2.yaml  stackset_child1.yaml  stackset_child2.yaml
Charts/: Cleanup.md  Dynamic.md  Flow.md  client-side-effects-2023-09-11-1140.excalidraw
ImprovedCFN/: CyngularOnBoarding.yaml  bucket-policy-s3-statement.json  stack2.yaml  stackset_child1.yaml
Lambdas/: CreateVFL.py  CreatedResources.py  ec2_processes.py  (+2 more)
(+176 files in other folders)
