[project]
name = "cyngular-s3-sync"
version = "1.0.0"
description = "S3 sync utilities for Cyngular CI/CD pipelines"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0", 
    "rich>=13.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"